[package]
name = "mozaic"
version = "0.3.0"
authors = ["Zeus WPI"]
edition = "2018"

[lib]
name = "mozaic"
path = "src/lib.rs"

[dependencies]
bytes = "0.5.4"
hex = "0.4.0"
rand = { version = "0.7.3", default-features = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-std = { version = "1.5.0", features = ["attributes"] }
futures = { version = "0.3.1", features = ["executor", "thread-pool"] }

tracing = "0.1.12"
tracing-futures = "0.2.1"
tracing-subscriber = "0.2.0"

mozaic-derive = { path = "./mozaic-derive" }

ws = "0.9.1"
